--- a/style.css
+++ b/style.css
@@ -16,12 +16,15 @@ li,a,button {
 
 header {
   position: fixed;
-  z-index: 1;
+  z-index: 999;
   display: flex;
   padding: 20px 1%;
+  height: 70px;
   width: 100%;
-  top: 5px;
+  top: 0px;
+  background-color: #FFFFFF;
 }
+
 .menu {
   display: flex;
 }
@@ -59,6 +62,7 @@ header {
 .navbar-list .drop-btn:hover {
   color: #FF707A;
 }
+
 .navbar-list li:hover + .dropdown-menu {
   display: block;
 }
@@ -97,10 +101,10 @@ header {
   color: #2F2643;
   margin: 120px 100px 40px 100px;
   text-align: center;
-  font-size: 60px;
+  font-size: 55px;
 }
 
-.p-mainPage {
+.p-first {
   color: black ;
   margin: 1px 100px 30px 100px;
   text-align: center;
@@ -121,4 +125,57 @@ header {
 
 .join-btn:hover {
   color: black;
+}
+
+/* swiper */
+.swiper {
+  width: 100%;
+  height: 414px;
+  width: 1000px;
+  top: 30px;
+  border-radius: 0px;
+}
+
+.swiper-slide {
+   /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-pagination {
+  height: 8px;
+  width: 36px;
+  left: 665px;
+  top: 870px;
+  border-radius: 0px;
+  position: absolute;
+}
+
+.second-heading {
+  margin-top: 170px;
+  text-align: center;
+  font-size: 30px;
+}
+
+.p-second {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 20px;
+  color: #76737f;
 }
